# agent-memory

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  Cross.toml  README.md  Taskfile.yml  clippy.toml  env.sh
.cargo/: config.toml
.github/workflows/: ci.yml  e2e-cli.yml  release.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json
.planning/milestones/: v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md  v2.0-MILESTONE-AUDIT.md  v2.0-REQUIREMENTS.md  v2.0-ROADMAP.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md  v2.2-MILESTONE-AUDIT.md  v2.2-REQUIREMENTS.md  v2.3-REQUIREMENTS.md  v2.3-ROADMAP.md  v2.4-REQUIREMENTS.md  v2.5-MILESTONE-AUDIT.md  v2.5-REQUIREMENTS.md  v2.5-ROADMAP.md  v2.7-REQUIREMENTS.md  v2.7-ROADMAP.md  v3.0-REQUIREMENTS.md  v3.1-REQUIREMENTS.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md  v2.6-PITFALLS.md  v2.6-SUMMARY.md
adapters/codex-cli/: .gitignore  README.md  SANDBOX-WORKAROUND.md
benchmarks/: baselines.toml
benchmarks/fixtures/: compression-001.toml  multisession-001.toml  temporal-001.toml
benchmarks/scripts/: download-locomo.sh
crates/e2e-tests/: Cargo.toml
crates/e2e-tests/benchmarks/: baseline.json  latest.json  latest.txt
crates/e2e-tests/src/: lib.rs
crates/e2e-tests/tests/: bm25_teleport_test.rs  cross_project_test.rs  dedup_test.rs  degradation_test.rs  episodic_test.rs  error_path_test.rs  fail_open_test.rs  hybrid_search_test.rs  multi_agent_test.rs  pipeline_test.rs  ranking_test.rs  stale_filter_test.rs  topic_graph_test.rs  vector_search_test.rs
crates/memory-adapters/: Cargo.toml
crates/memory-adapters/src/: adapter.rs  config.rs  error.rs  lib.rs
crates/memory-bench/: Cargo.toml
crates/memory-bench/src/: baseline.rs  cli.rs  fixture.rs  lib.rs  locomo.rs  main.rs  report.rs  runner.rs  scorer.rs
crates/memory-cli/: Cargo.toml
crates/memory-cli/src/: cli.rs  client.rs  main.rs  output.rs
crates/memory-cli/src/commands/: add.rs  backup.rs  context.rs  daily.rs  import.rs  mod.rs  recall.rs  search.rs  summary.rs  timeline.rs
crates/memory-client/: Cargo.toml
crates/memory-client/src/: client.rs  error.rs  hook_mapping.rs  lib.rs
crates/memory-daemon/: Cargo.toml
crates/memory-daemon/examples/: ingest_demo.rs
crates/memory-daemon/src/: cli.rs  clod.rs  commands.rs  lib.rs  main.rs
crates/memory-daemon/tests/: integration_test.rs
crates/memory-embeddings/: Cargo.toml
crates/memory-embeddings/src/: cache.rs  candle.rs  error.rs  lib.rs  model.rs
crates/memory-indexing/: Cargo.toml
crates/memory-indexing/src/: bm25_updater.rs  checkpoint.rs  error.rs  lib.rs  pipeline.rs  rebuild.rs  updater.rs  vector_updater.rs
crates/memory-ingest/: Cargo.toml
crates/memory-ingest/src/: main.rs
crates/memory-installer/: Cargo.toml
crates/memory-installer/src/: converter.rs  lib.rs  main.rs  parser.rs  tool_maps.rs  types.rs  writer.rs
crates/memory-installer/src/converters/: claude.rs  codex.rs  copilot.rs  gemini.rs  helpers.rs  mod.rs  opencode.rs  skills.rs
crates/memory-installer/tests/: e2e_converters.rs
crates/memory-orchestrator/: Cargo.toml
crates/memory-orchestrator/src/: context_builder.rs  expand.rs  fusion.rs  lib.rs  orchestrator.rs  rerank.rs  types.rs
crates/memory-retrieval/: Cargo.toml
crates/memory-retrieval/src/: classifier.rs  contracts.rs  executor.rs  lib.rs  ranking.rs  stale_filter.rs  tier.rs  types.rs
crates/memory-scheduler/: Cargo.toml
crates/memory-scheduler/src/: config.rs  error.rs  jitter.rs  lib.rs  overlap.rs  registry.rs  scheduler.rs
crates/memory-scheduler/src/jobs/: bm25_prune.rs  bm25_rebuild.rs  compaction.rs  indexing.rs  mod.rs  rollup.rs  search.rs  vector_prune.rs
crates/memory-search/: Cargo.toml
crates/memory-search/src/: document.rs  error.rs  index.rs  indexer.rs  lib.rs  lifecycle.rs  schema.rs  searcher.rs
crates/memory-service/: Cargo.toml  build.rs
crates/memory-service/src/: agents.rs  backup.rs  episodes.rs  federated.rs  hybrid.rs  import.rs  ingest.rs  lib.rs  novelty.rs  query.rs  retrieval.rs  scheduler_service.rs  search_service.rs  server.rs  teleport_service.rs  topics.rs  vector.rs
crates/memory-service/tests/: import_round_trip.rs
crates/memory-storage/: Cargo.toml
crates/memory-storage/src/: column_families.rs  db.rs  episodes.rs  error.rs  keys.rs  lib.rs  usage.rs
crates/memory-toc/: Cargo.toml
crates/memory-toc/src/: builder.rs  config.rs  expand.rs  grip_id.rs  lib.rs  node_id.rs  rollup.rs  search.rs  segmenter.rs
crates/memory-toc/src/summarizer/: api.rs  grip_extractor.rs  mock.rs  mod.rs
crates/memory-topics/: Cargo.toml
crates/memory-topics/src/: config.rs  error.rs  extraction.rs  importance.rs  labeling.rs  lib.rs  lifecycle.rs  llm_labeler.rs  relationships.rs  similarity.rs  storage.rs  tfidf.rs  types.rs
crates/memory-types/: Cargo.toml
crates/memory-types/src/: config.rs  dedup.rs  episode.rs  error.rs  event.rs  grip.rs  lib.rs  outbox.rs  salience.rs  segment.rs  toc.rs  usage.rs
crates/memory-vector/: Cargo.toml
crates/memory-vector/src/: error.rs  hnsw.rs  index.rs  lib.rs  lifecycle.rs  metadata.rs  pipeline.rs
docs/: API.md  ARCHITECTURE.md  COGNITIVE_ARCHITECTURE.md  INTEGRATION.md  README.md  UPGRADING.md  USAGE.md  benchmarks.md  wiki-mapping.yml
docs/adapters/: authoring-guide.md  clod-format.md  cross-agent-guide.md
docs/design/: 01-architecture-overview.md  02-data-flow-sequences.md  03-domain-model.md  04-state-machines.md  05-api-reference.md  06-toc-navigation-guide.md  07-storage-architecture.md  08-scheduler-design.md  09-getting-started.md  10-architecture-decisions.md  11-plantuml-diagrams.md  12-security-operations.md  13-data-schema-reference.md  README.md
docs/plans/: bm25-prd-revision-plan.md  configuration-wizard-skills-plan.md  memory-ranking-enhancements-rfc.md  phase-10.5-agentic-toc-search.md  phase-12-vector-teleport.md  (+5 more)
examples/: hooks.yaml
plugins/: installer-sources.json
proto/: memory.proto
scripts/: cli-matrix-report.sh  demo.sh
(+581 files in other folders)
