[workspace]
resolver = "2"
members = [
    "crates/memory-types",
    "crates/memory-storage",
    "crates/memory-service",
    "crates/memory-daemon",
    "crates/memory-toc",
    "crates/memory-client",
    "crates/memory-ingest",
    "crates/memory-scheduler",
    "crates/memory-search",
    "crates/memory-embeddings",
    "crates/memory-vector",
    "crates/memory-indexing",
    "crates/memory-topics",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/spillwave/agent-memory"

[workspace.dependencies]
# Internal crates
memory-types = { path = "crates/memory-types" }
memory-storage = { path = "crates/memory-storage" }
memory-service = { path = "crates/memory-service" }
memory-client = { path = "crates/memory-client" }
memory-toc = { path = "crates/memory-toc" }
memory-scheduler = { path = "crates/memory-scheduler" }
memory-search = { path = "crates/memory-search" }
memory-embeddings = { path = "crates/memory-embeddings" }
memory-vector = { path = "crates/memory-vector" }
memory-indexing = { path = "crates/memory-indexing" }
memory-topics = { path = "crates/memory-topics" }

# Async runtime
tokio = { version = "1.43", features = ["full"] }

# gRPC
tonic = "0.12"
tonic-build = "0.12"
tonic-health = "0.12"
tonic-reflection = "0.12"
prost = "0.13"
prost-types = "0.13"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "2.0"
anyhow = "1.0"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Storage (to be used in later phases)
rocksdb = "0.22"

# Full-text search
tantivy = "0.25"

# ID generation
ulid = "1.1"

# Time
chrono = { version = "0.4", features = ["serde"] }

# CLI
clap = { version = "4.5", features = ["derive"] }

# Configuration
config = "0.14"
directories = "6.0"

# Testing
tempfile = "3.15"
rand = "0.9"

# Token counting
tiktoken-rs = "0.5"

# Async trait support
async-trait = "0.1"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Retry logic
backoff = { version = "0.4", features = ["tokio"] }

# Secret handling
secrecy = { version = "0.10", features = ["serde"] }

# Candle ML framework
candle-core = "0.8"
candle-nn = "0.8"
candle-transformers = "0.8"

# Tokenization
tokenizers = "0.20"

# Model downloading
hf-hub = "0.3"

# Directory utilities
dirs = "5"

# Vector search
usearch = "2"

# Clustering
hdbscan = "0.12"
