[package]
name = "memory-ingest"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "CCH hook handler for ingesting events into agent-memory daemon"

[[bin]]
name = "memory-ingest"
path = "src/main.rs"

[dependencies]
memory-client = { path = "../memory-client" }
memory-types = { path = "../memory-types" }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
