[package]
name = "memory-orchestrator"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memory-retrieval = { workspace = true }
memory-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
