[package]
name = "memory-retrieval"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Agent retrieval policy engine for memory layer selection, intent classification, and execution"

[dependencies]
memory-types = { workspace = true }

# Async runtime
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Logging
tracing = { workspace = true }

# Time
chrono = { workspace = true }

# Futures utilities
futures = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
