[package]
name = "memory-scheduler"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Background job scheduler for agent-memory daemon"

[dependencies]
# Cron scheduling
tokio-cron-scheduler = "0.15"
chrono-tz = "0.10"

# Tokio utilities
tokio-util = { version = "0.7", features = ["rt"] }
tokio = { workspace = true }

# Time handling
chrono = { workspace = true }

# Logging
tracing = { workspace = true }

# Error handling
thiserror = { workspace = true }

# Serialization
serde = { workspace = true }

# UUID for job IDs
uuid = "1.11"

# Random number generation for jitter
rand = "0.8"

[dev-dependencies]
tokio = { workspace = true, features = ["test-util"] }
serde_json = { workspace = true }
