[package]
name = "memory-search"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Full-text search for Agent Memory using Tantivy"

[dependencies]
tantivy = { workspace = true }
memory-types = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
tokio = { workspace = true, features = ["test-util", "macros", "rt-multi-thread"] }
