[package]
name = "memory-service"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memory-types = { workspace = true }
memory-storage = { workspace = true }
memory-scheduler = { workspace = true }
memory-search = { workspace = true }
memory-toc = { workspace = true }
memory-embeddings = { workspace = true }
memory-vector = { workspace = true }
memory-topics = { workspace = true }
memory-retrieval = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-reflection = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
ulid = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
rand = { workspace = true }

[build-dependencies]
tonic-build = { workspace = true }
