[package]
name = "memory-storage"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
memory-types = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
rocksdb = { workspace = true }
ulid = { workspace = true }
chrono = { workspace = true }

[dev-dependencies]
tempfile = "3"
rand = "0.8"
